# Backdrops

backdrops = [
  'Ankh.bm', 'Background.bm', 'BrickWall.bm', 'Concave.pm',
  'Convex.pm', 'Corduroy.pm', 'Crochet.pm', 'Foreground.bm',
  'InlayColor.pm', 'InlayPlain.pm', 'KnitLight.pm', 'Lattice.pm',
  'LatticeBig.pm', 'Leaves.pm', 'NoBackdrop.bm', 'NoBackdrop.pm',
  'OldChars.pm', 'Paver.pm', 'Pebbles.pm', 'PinStripe.pm',
  'RakedSand.bm', 'RicePaper.pm', 'SkyDark.pm', 'SkyLight.pm',
  'Sprinkles.pm', 'SunLogo.pm', 'Toronto.bm', 'WaterDrops.pm',
  'Wooly.pm'
]

install_data(backdrops,
  install_dir : join_paths(get_option('prefix'), 'share/backdrops')
)

# Symlink backdrops -> share/backdrops happens in install hook or we just rely on standard path
